--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ ul {
 li {
   display: inline;
   position: relative;
-  margin: 0; 
+  margin: 0.3rem; 
 }
 
 a {
@@ -236,14 +236,12 @@ a:hover {
 .news-image::before {
   content: '';
   position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-color: rgba(0, 0, 0, 0);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Dark overlay always visible */
   transition: background-color 0.3s ease-in-out;
-}
-
-.news-image:hover::before {
-  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .news-content {
@@ -251,14 +249,9 @@ a:hover {
   bottom: 1rem;
   left: 1rem;
   right: 1rem;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  opacity: 1; /* Always visible */
   color: #cce7ff;
   z-index: 2;
-}
-
-.news-image:hover .news-content {
-  opacity: 1;
 }
 
 .news-content h3 {
