--- a/css/styles.css
+++ b/css/styles.css
@@ -277,5 +277,15 @@ a:hover {
   font-size: 0.9rem;
 }
 
+/* RoadMap */
+
+/* Background */
+
+body {
+  background-image: url('../images/rodamapback.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 
