--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ a:hover {
 /* Background */
 
 body.roadmap {
-  background-image: url('../images/roadmapback.png');
+  background-image: url('/images/roadmapback.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
