--- a/css/styles.css
+++ b/css/styles.css
@@ -365,5 +365,15 @@ a:hover {
   }
 }
 
+/*RoadMap*/
+
+/*Background*/
+
+body.road_map {
+  background-image: url('images/roadmapback.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 
