--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,7 @@ a:hover {
 /*Background*/
 
 body.road_map {
-  background-image: url('images/roadmapback.png');
+  background-image: url("../images/roadmapback.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
