--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,7 @@ body.road_map {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  min-height: 100vh;
 }
 
 
