--- a/css/styles.css
+++ b/css/styles.css
@@ -370,12 +370,10 @@ a:hover {
 /*Background*/
 
 body.road_map {
-  /*background-image: url("../images/roadmapback.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 100vh; */
-  background-color: red;
+  min-height: 100vh;
 }
 
 
