--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,7 @@ body.road_map {
   width: 80%;
   display: block;
   height: 300px;
+  aspect-ratio: 5/ 1;
   margin: 2rem auto 1rem auto;
   border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
