--- a/css/styles.css
+++ b/css/styles.css
@@ -378,11 +378,12 @@ body.road_map {
 }
 
 #roadmap-header {
-  width: 80%;
-  display: block;
+  width: 90%;
+  max-width: 800px;
   height: 120px;
-  aspect-ratio: 5/ 1;
-  margin: 2rem auto 1rem auto;
+  object-fit: cover;
+  display: block;
+  margin: 2rem auto 1.5rem auto;
   border-radius: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
