--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,15 @@ body.road_map {
   display: block;
 }
 
-table {}
+table {
+  width: 90%;
+  margin: 2rem auto;
+  border-collapse: separate;
+  border-spacing: 0 1rem;
+  font-size: 1 rem;
+  color: #3b2f1b;
+  background-color: transparent;
+}
 
 
 
