--- a/css/styles.css
+++ b/css/styles.css
@@ -388,8 +388,8 @@ table {
   margin: 2rem auto;
   border-collapse: separate;
   border-spacing: 0 1rem;
-  font-size: 1 rem;
-  color: #3b2f1b;
+  font-size: 2 rem;
+  color: black;
 }
 
 th {
