--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,8 @@ body.road_map {
 
 .road-banner-image {
   width: 100%;
-  height: auto;
+  height: 200px;
+  object-fit: cover;
   display: block;
 }
 
@@ -396,14 +397,15 @@ table {
   margin: 2rem auto;
   border-collapse: separate;
   border-spacing: 0 1rem;
-  font-size: 2rem;
+  font-size: 1rem;
   color: black;
+  border: none;
 }
 
 th, td {
   padding: 1rem;
   text-align: left;
-  border: 1px solid #ccc;
+  border: none;
 }
 
 th {
