--- a/css/styles.css
+++ b/css/styles.css
@@ -381,11 +381,12 @@ body.road_map {
 
 .road-banner-image {
   width: 100%;
-  height: 200px;
+  height: 400px;
   object-fit: cover;
   display: block;
 }
 
+/* Table */
 #roadmap-t1 {
   text-align: center;
   font-size: 2.5rem;
