--- a/css/styles.css
+++ b/css/styles.css
@@ -374,7 +374,7 @@ a:hover {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  height: 800px;
+  display: inline-block;
   padding: 2rem;
   border-radius: 10px;
 }
