--- a/css/styles.css
+++ b/css/styles.css
@@ -417,6 +417,12 @@ th {
   background-color: #f5e4c3;
 }
 
+td {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  
+}
+
 
 /* row backgrounds */
 .row-sailing {
@@ -452,7 +458,6 @@ th {
 }
 
 .update-row {
-  background-color: #fff5dc;
   transition: background 0.3s ease;
   cursor: pointer;
   padding: 1rem;
