--- a/css/styles.css
+++ b/css/styles.css
@@ -401,7 +401,7 @@ table {
   border-collapse: separate;
   border-spacing: 0 2rem;
   font-size: 1rem;
-  color: black;
+  color: white;
   border: none;
 }
 
