--- a/css/sign_in.css
+++ b/css/sign_in.css
@@ -6,9 +6,9 @@ header {
   
   html, body {
     height: 100%;
-    margin: 0; /* Remove default margin */
+    margin: 0; 
     display: flex;
-    flex-direction: column; /* Stack elements vertically */
+    flex-direction: column; 
   }
   
   body {
@@ -16,7 +16,7 @@ header {
   }
   
   body > *:not(.site-footer) {
-    flex: 1; /* Push the footer to the bottom */
+    flex: 1; 
   }
   
   nav {
@@ -292,7 +292,7 @@ header {
     padding: 2rem 1rem;
     font-size: 0.75rem; 
     text-align: center;
-    line-height: 1.6;
+    line-height: 1.6em;
   }
   
   .site-footer *,
