--- a/css/styles.css
+++ b/css/styles.css
@@ -432,6 +432,13 @@ td {
   background-position: center;
 }
 
+.row-sailing-two {
+  background-image: url("../images/sailing2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* I looked up how to create this effect */
 .show-default {
   display: flex;
