--- a/css/styles.css
+++ b/css/styles.css
@@ -439,6 +439,13 @@ td {
   background-position: center;
 }
 
+.row-blood-moon{
+  background-image: url("../images/blood-moon-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* I looked up how to create this effect */
 .show-default {
   display: flex;
