--- a/css/styles.css
+++ b/css/styles.css
@@ -446,6 +446,13 @@ td {
   background-position: center;
 }
 
+.row-yama {
+  background-image: url("../images/yama.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* I looked up how to create this effect */
 .show-default {
   display: flex;
