--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ a:hover {
 #roadmap-t1 {
   text-align: center;
   font-size: 2.5rem;
-  color: black;
+  color: rgb(255, 255, 255);
   margin: auto;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
