--- a/css/styles.css
+++ b/css/styles.css
@@ -570,7 +570,7 @@ a:hover {
     height: auto; /* Maintain aspect ratio */
     position: absolute;
     top: 0;
-    left: -8%;
+    left: -5em;
     z-index: -1; /* Behind other elements */
   }
   
