--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ a:hover {
 
 /* Media querie for smaller screens */
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   nav {
     flex-direction: column;
     align-items: center;
